welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: '(' expected but identifier found.
		if estSurBiscuit {
                   ^Poucet:10: error: illegal start of simple expression
	} while (!croisement)
        ^Poucet:11: error: '(' expected but identifier found.
	if biscuit>=3 
           ^