welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var sortie=false
while (!sortie) {
	var biscuit=0
	do { 
		avance
		if estSurBiscuit {
			biscuit=biscuit+1
		}
	} while (!croisement)
	if biscuit>=3 
		gauche
	else
		droite
}
